# attention-schema-theory-experiments

./: .gitignore  AUTHORS.txt  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: black.yaml  flake8.yaml  tests.yaml
aintelope/: __main__.py  aintelope_typing.py  experiments.py  gridsearch.py  gridsearch_pipeline.py  nonpipeline.py  pipeline.py
aintelope/agents/: __init__.py  a2c_agent.py  abstract_agent.py  ddpg_agent.py  dqn_agent.py  example_agent.py  handwritten_rules_agent.py  instinct_agent.py  llm_agent.py  memory.py  ppo_agent.py  q_agent.py  random_agent.py  sac_agent.py  sb3_base_agent.py  sb3_handwritten_rules_expert.py  sb3_instincts.py  shard_agent.py  simple_agents.py  td3_agent.py
aintelope/agents/handwritten_rules/: savanna_safetygrid_handwritten_rules.py
aintelope/agents/instincts/: savanna_instincts.py  savanna_safetygrid_instincts.py
aintelope/agents/shards/: lunar_shards.py  savanna_shards.py
aintelope/analytics/: analyze_results.ipynb  boxplot.py  gridsearch_analytics.py  merge_gridsearch_result_files.py  plot_results.ipynb  plotting.py  recalculate_gridsearch_sfella_scores.py  recording.py  remove_trials_from_results.py  tensorboard.py
aintelope/config/: __init__.py  config_baseline.yaml  config_benchmark_1.yaml  config_benchmark_10.yaml  config_benchmark_11.yaml  config_benchmark_2.yaml  config_benchmark_3.yaml  config_benchmark_4.yaml  config_benchmark_5.yaml  config_benchmark_6.yaml  config_benchmark_7.yaml  config_benchmark_8.yaml  config_benchmark_9.yaml  config_eval_score.yaml  config_experiment.yaml  config_experiment_ddpg.yaml  config_experiment_dqn.yaml  config_experiment_exampleagent.yaml  config_experiment_handwritten_rules.yaml  config_experiment_instinct.yaml  config_experiment_llm_agent.yaml  config_experiment_mixed.yaml  config_experiment_ppo.yaml  config_experiment_random.yaml  config_experiment_reward.yaml  config_experiment_sac.yaml  config_experiment_score.yaml  config_experiment_score_a2c.yaml  config_experiment_score_a2c_cnn2.yaml  config_experiment_score_a2c_cnn3.yaml  config_experiment_score_a2c_mlp.yaml  config_experiment_score_ddpg.yaml  config_experiment_score_dqn.yaml  config_experiment_score_dqn_cnn2.yaml  config_experiment_score_dqn_cnn3.yaml  config_experiment_score_dqn_mlp.yaml  config_experiment_score_ppo.yaml  config_experiment_score_ppo_cnn2.yaml  config_experiment_score_ppo_cnn2_weightsharing.yaml  config_experiment_score_ppo_cnn3.yaml  (+41 more)
aintelope/config/training/: lightning.yaml  lightning_lunar.yaml
aintelope/environments/: __init__.py  _zoo_parallel_env_template.py  multiagent_zoo_to_gym_wrapper.py  rock_paper_scissors.py  savanna.py  savanna_gym.py  savanna_safetygrid.py  savanna_zoo.py  singleagent_zoo_to_gym_wrapper.py  typing.py  zoo_to_gym_wrapper.py
aintelope/environments/ai_safety_gridworlds/: aintelope_savanna.py
aintelope/environments/env_utils/: cleanup.py  distance.py  (+1 more)
aintelope/model/: dqn.py
aintelope/models/: dqn.py  llm_utilities.py
aintelope/trainer/: dqn_training.py
aintelope/training/: checkpoint_viewer.py  dqn_training.py  lightning_trainer.py  memory.py  simple_eval.py
aintelope/utils/: __init__.py
requirements/: aintelope.txt  aintelope_dev.txt  api.txt  dev.txt
tests/: __init__.py  __main__.py  conftest.py  test_config.py
tests/agents/: test_handwritten_rules_agent.py  test_instinct_agent.py  test_q_agent.py  test_random_agent.py  test_simple_agents.py  test_simple_agents_parallel.py  test_simple_agents_sequential.py
tests/environments/: test_savanna.py  test_savanna_gym.py  test_savanna_safetygrid_parallel.py  test_savanna_safetygrid_sequential.py  test_savanna_zoo.py  test_savanna_zoo_parallel.py  test_savanna_zoo_sequential.py
tests/training/: test_trainer.py  test_trainer_safetygrid_parallel.py  test_trainer_safetygrid_sequential.py  test_trainer_zoo_parallel.py  test_trainer_zoo_sequential.py
(+18 files in other folders)
