[tool.poetry]
name = "aintelope"
version = "0.1.0"
description = "Simulate agents with reinforcement learning over selected cue-response patterns"
authors = ["Hauke Rehfeld <git@haukerehfeld.de>", "Gunnar Zarncke <gunnar@zarncke.de>", "Andre Kochanke <a.kochanke@posteo.net>"]

[tool.poetry.dependencies]
python = "3.10.3"
pytorch-lightning = "1.6.4"
flake8 = "4.0.1"
toml = "0.10.2"
isort = "5.10.1"
pytest = "7.1.2"
mypy = "0.961"
PettingZoo = "1.18.1"
swig = "4.0.2"
Box2D = "2.3.2"
Box2D-kengz = "2.3.3"
gym = "0.26.0"
pygame = "2.1.2"
gemini-engine = "1.0.9"
black = "22.3.0"
pytest-cov = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 80

[tool.isort]
line_length = 80

[tool.mypy]
ignore_missing_imports = true
