[project]
name = "aintelope"
version = "0.1.0"
description = "Simulate agents with reinforcement learning over selected cue-response patterns"
readme = "README.md"
authors = [
  {name = "Orpheus Lummis", email = "o@orpheuslummis.info"},
  {name = "Nathan Helm-Burger", email = "nathan.helm.burger@gmail.com"},
  {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
  {name = "Gunnar Zarncke", email = "gunnar@zarncke.de"},
  {name = "Andre Kochanke", email = "a.kochanke@posteo.net"}]
requires-python = ">=3.10.3"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aintelope", "tests"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
line_length = 88

[tool.mypy]
ignore_missing_imports = true
