[project]
name = "aintelope"
version = "0.9.0"
description = "Simulate agents with reinforcement learning over selected cue-response patterns"
readme = "README.md"
authors = [
  {name = "Roland Pihlakas", email = "roland@simplify.ee"},  
  {name = "Orpheus Lummis", email = "o@orpheuslummis.info"},
  {name = "Nathan Helm-Burger", email = "nathan.helm.burger@gmail.com"},
  {name = "Joel Pyykkö", email = "sassort@gmail.com"},  
  {name = "Hauke Rehfeld", email = "git@haukerehfeld.de"},
  {name = "Gunnar Zarncke", email = "gunnar@zarncke.de"},
  {name = "Andre Kochanke", email = "a.kochanke@posteo.net"}]
requires-python = ">=3.10.3"
dependencies = [
  "diskcache==5.6.3",
  "filelock==3.13.1",
  "flatten-dict==0.4.2",
  "gymnasium==0.29.1",
  "hydra-core==1.3.0",
  "json-tricks==3.17.1",
  "matplotlib==3.7.0",
  "numpy==1.26.4",
  "openai==1.45.0",
  "pandas==1.5.3",
  "PettingZoo==1.24.1",
  "posix-ipc==1.1.1; os_name != 'nt'",
  "progressbar2==4.2.0",
  "psutil==5.9.4",
  "pygame==2.4",
  "seaborn==0.12.2",
  "semaphore-win-ctypes==0.1.2; os_name == 'nt'",
  "torch==2.1.0",
  "stable-baselines3==2.3.2",
  "supersuit==3.9.3",
  "tenacity==8.2.2",
  "tiktoken==0.7.0",
  "-e git+https://github.com/levitation-opensource/ai-safety-gridworlds@biological-compatibility-benchmarks#egg=ai-safety-gridworlds",
  "-e git+https://github.com/levitation-opensource/zoo_to_gym_multiagent_adapter@main#egg=zoo_to_gym_multiagent_adapter"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aintelope", "tests"]

[tool.black]
line-length = 88
force-exclude = '''
/(
ai_safety_gridworlds
| gymnasium
| outputs
| pettingzoo
| pycolab
| stable_baselines3
| supersuit
| zoo_to_gym_multiagent_adapter
| \.vshistory
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E121,E123,E126,E226,E24,E704,W503,W504,E203,E501,F401,W291,E266,F403,F405,F841,E265,F811"
exclude = "ai_safety_gridworlds"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true
